--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-express": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
@@ -47,8 +49,6 @@
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
   },
