--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "bundle": "npm run clean && npm run build && abtnode bundle --zip",
+    "deploy": "npm run bundle && abtnode deploy .blocklet/bundle",
+    "clean": "rm -rf .blocklet"
   },
   "dependencies": {
-    "@nestjs/cli": "^7.0.0",
+    "@abtnode/passport": "^1.0.32",
+    "@abtnode/util": "^1.0.32",
     "@arcblock/forge-sdk": "^1.4.2",
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/mapped-types": "^0.1.1",
@@ -52,6 +57,13 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
   },
+  "files": [
+    "blocklet.js",
+    "blocklet.zip",
+    "blocklet.md",
+    "logo.png",
+    "README.md"
+  ],
   "jest": {
     "moduleFileExtensions": [
       "js",
